--- a/package.json
+++ b/package.json
@@ -2,16 +2,23 @@
   "name": "tualmi-website",
   "version": "1.0.0",
   "private": true,
+  "type": "module",
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "server": "node server.js",
+    "server:dev": "nodemon server.js"
   },
   "dependencies": {
+    "cors": "^2.8.5",
+    "express": "^4.21.2",
     "react": "^18.2.0",
-    "react-dom": "^18.2.0"
+    "react-dom": "^18.2.0",
+    "stripe": "^14.25.0"
   },
   "devDependencies": {
+    "nodemon": "^3.1.10",
     "vite": "^5.0.0"
   }
 }
